Updated dependencies to Java 17