@@ -21,57 +21,67 @@
     <!-- Additions Florian -->
 
     <build>
-		<!-- fix the versions of the plugins used in the build -->
-		<pluginManagement>
+        <!-- fix the versions of the plugins used in the build -->
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.3.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.5.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.1.2</version>
+                    <configuration>
+                        <argLine>--add-modules java.xml.bind</argLine>
+                        <argLine>--add-modules java.activation</argLine>
+                        <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>2.4</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.5.1</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-dependency-plugin</artifactId>
-					<version>2.4</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-		<plugins>
             <!-- To compile with JDK5.0 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
 
             <!-- Additions Florian -->
             <!-- To copy the dependencies from the maven repository to the lib directory -->
             <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-dependency-plugin</artifactId>
-               <executions>
-                 <execution>
-                   <id>copy-dependencies</id>
-                   <phase>package</phase>
-                   <goals>
-                     <goal>copy-dependencies</goal>
-                   </goals>
-                   <configuration>
-                     <outputDirectory>${project.build.directory}/${lib.dir}</outputDirectory>
-                     <overWriteReleases>false</overWriteReleases>
-                     <overWriteSnapshots>false</overWriteSnapshots>
-                     <overWriteIfNewer>true</overWriteIfNewer>
-                   </configuration>
-                 </execution>
-               </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/${lib.dir}</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <!-- Additions Florian -->
 
@@ -102,11 +112,11 @@
                         </configuration>
                         <executions>
                             <execution>
-                              <id>make-assembly</id>
-                              <phase>package</phase> <!-- bind to the packaging phase -->
-                              <goals>
-                                <goal>single</goal>
-                              </goals>
+                                <id>make-assembly</id>
+                                <phase>package</phase> <!-- bind to the packaging phase -->
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
                             </execution>
                         </executions>
                     </plugin>
@@ -121,19 +131,19 @@
             <build>
                 <plugins>
                     <!-- to create a executable jar to start the MzMLValidatorGUI -->
-					<plugin>
-                      <groupId>org.apache.maven.plugins</groupId>
-                      <artifactId>maven-jar-plugin</artifactId>
-                      <configuration>
-                        <archive>
-                          <manifest>
-                            <mainClass>psidev.psi.ms.MzMLValidatorGUI</mainClass>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>${lib.dir}</classpathPrefix>
-                          </manifest>
-                        </archive>
-                      </configuration>
-					</plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>psidev.psi.ms.MzMLValidatorGUI</mainClass>
+                                    <addClasspath>true</addClasspath>
+                                    <classpathPrefix>${lib.dir}</classpathPrefix>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -143,17 +153,17 @@
                 <plugins>
                     <!-- to create a executable jar to start the MzMLSchemaValidator -->
                     <plugin>
-                      <groupId>org.apache.maven.plugins</groupId>
-                      <artifactId>maven-jar-plugin</artifactId>
-                      <configuration>
-                        <archive>
-                          <manifest>
-                            <mainClass>psidev.psi.ms.MzMLSchemaValidator</mainClass>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>${lib.dir}</classpathPrefix>
-                          </manifest>
-                        </archive>
-                      </configuration>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>psidev.psi.ms.MzMLSchemaValidator</mainClass>
+                                    <addClasspath>true</addClasspath>
+                                    <classpathPrefix>${lib.dir}</classpathPrefix>
+                                </manifest>
+                            </archive>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
@@ -164,17 +174,17 @@
                 <plugins>
                     <!-- to create a executable jar to start the command line MzMLValidator -->
                     <plugin>
-                      <groupId>org.apache.maven.plugins</groupId>
-                      <artifactId>maven-jar-plugin</artifactId>
-                      <configuration>
-                        <archive>
-                          <manifest>
-                            <mainClass>psidev.psi.ms.MzMLValidator</mainClass>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>${lib.dir}</classpathPrefix>
-                          </manifest>
-                        </archive>
-                      </configuration>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>psidev.psi.ms.MzMLValidator</mainClass>
+                                    <addClasspath>true</addClasspath>
+                                    <classpathPrefix>${lib.dir}</classpathPrefix>
+                                </manifest>
+                            </archive>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
@@ -183,26 +193,18 @@
     <!-- Additions Florian -->
 
     <repositories>
-		<!-- removed java.net repositories, these are now mirrored in maven central -->
+        <!-- removed java.net repositories, these are now mirrored in maven central -->
         <!-- EBI repositories -->
         <repository>
-            <id>ebi-repo</id>
-            <name>The EBI internal repository</name>
-            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
+            <id>nexus-ebi-release-repo</id>
+            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
         </repository>
         <repository>
-            <id>ebi-repo-snapshots</id>
-            <name>The EBI internal repository</name>
-            <url>http://www.ebi.ac.uk/~maven/m2repo_snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
+            <id>nexus-ebi-snapshot-repo</id>
+            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -213,27 +215,40 @@
         <dependency>
             <groupId>psidev.psi.tools</groupId>
             <artifactId>validator</artifactId>
-            <version>2.0.3-SNAPSHOT</version>
+            <version>2.1.0</version>
         </dependency>
 
         <dependency>
             <groupId>uk.ac.ebi.jmzml</groupId>
             <artifactId>jmzml</artifactId>
-            <version>1.6.8-SNAPSHOT</version>
+            <version>1.7.11</version>
         </dependency>
         
         <dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
- 			<scope>test</scope> 
-		</dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope> 
+        </dependency>
 		
-		<dependency>
-			<groupId>net.java.dev.swing-layout</groupId>
-			<artifactId>swing-layout</artifactId>
-			<version>1.0.2</version>
-		</dependency>
+        <dependency>
+            <groupId>net.java.dev.swing-layout</groupId>
+            <artifactId>swing-layout</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+    
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
